# snappdf

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pysidedeploy.spec
.github/workflows/: release.yml
docs/: code-signing-policy.md  privacy-policy.md
src/snappdf/: __init__.py  __main__.py  app.py  converter.py  main_window.py  main_window.ui  theme.py  ui_main_window.py
src/snappdf/assets/: resources.qrc  resources_rc.py
